# eureka

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  codecov.yml  saved
.github/workflows/: ci.yaml
scripts/: code_coverage.sh
src/: config_manager.rs  file_handler.rs  git.rs  lib.rs  main.rs  printer.rs  program_access.rs  reader.rs  tests.rs  types.rs  utils.rs
tests/: tests.rs
