[package]
name = "eureka"
version = "2.0.0"
description = "CLI tool to input and store your ideas without leaving the terminal"
authors = ["Simon Egersand <s.egersand@gmail.com>"]
categories = ["command-line-interface", "command-line-utilities"]
keywords = ["cli", "terminal", "productivity", "git", "ideas"]

documentation = "https://github.com/simeg/eureka/blob/master/README.md"
homepage = "https://github.com/simeg/eureka"
repository = "https://github.com/simeg/eureka"
readme = "README.md"
license = "MIT"
edition = "2021"

exclude = [
    "assets/*",
    "tests/*",
    "scripts/*",
]

[dependencies]
clap = { version = "3.1.8", features = ["cargo"] }
dirs = "4.0.0"
git2 = "0.14.2"
termcolor = "1.1.3"
which = "4.2.5"
log = "0.4.16"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"

[dev-dependencies]
tempfile = "3.3.0"
