[package]
name = "eureka"
version = "2.0.0"
description = "CLI tool to input and store your ideas without leaving the terminal"
authors = ["Simon Egersand <s.egersand@gmail.com>"]
categories = ["command-line-interface", "command-line-utilities"]
keywords = ["cli", "terminal", "productivity", "git", "ideas"]

documentation = "https://github.com/simeg/eureka/blob/master/README.md"
homepage = "https://github.com/simeg/eureka"
repository = "https://github.com/simeg/eureka"
readme = "README.md"
license = "MIT"
edition = "2021"

exclude = [
    "assets/*",
    "tests/*",
    "scripts/*",
]

[dependencies]
clap = { version = "4.2.1", features = ["cargo"] }
dirs = "5.0.0"
git2 = "0.16.1"
termcolor = "1.2.0"
which = "4.4.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"

[dev-dependencies]
tempfile = "3.5.0"
